--- a/index.html
+++ b/index.html
@@ -43,113 +43,115 @@
     <br />
 
     <!-- Main content -->
-    <div class="section2">
+    <main>
+      <div class="section2">
 
-      <!-- Education  -->
-      <h2 class="sectionTitle">Education</h2>
-      <hr class="sectionTitleRule">
-      <hr class="sectionTitleRule2">
+        <!-- Education  -->
+        <h2 class="sectionTitle">Education</h2>
+        <hr class="sectionTitleRule">
+        <hr class="sectionTitleRule2">
 
-      <div class="section2Content">
-        <!-- UGA - Master's -->
-        <div style='display: inline-flex;'>
-          <div class='child'><img src="resources/images/ugalogo.png" alt="UGA Logo" height="55" width="50"></div>
-          <div class='child'><h2 class="sectionContentTitle">University of Georgia</h2></div>
+        <div class="section2Content">
+          <!-- UGA - Master's -->
+          <div style='display: inline-flex;'>
+            <div class='child'><img src="resources/images/ugalogo.png" alt="UGA Logo" height="55" width="50"></div>
+            <div class='child'><h2 class="sectionContentTitle">University of Georgia</h2></div>
+          </div>
+          <h3 class="sectionContentSubTitle"><strong>Master's Degree in Computer Science | 2019 - 2021</strong></h3>
+          <p class="sectionContent"><strong>Notable Courses:</strong> Cyber Forensics, Secure Programming, IoT Security, Cyber Security, Computer Networks, Advanced Algorithms, Approximation Algorithms, Computer Finance, Parallel Simulation, and Financial Market Simulation</p>
+          <p class="sectionContent"><strong>Project Experience:</strong> Rust, Python, C++, C#, C, Java, JavaScript, Socket Programming, Spring</p>
+
+          <br />
+
+          <!-- UGA - Bachelor's -->
+          <h3 class="sectionContentSubTitle"><strong>Bachelor's Degree in Computer Science | 2016 - 2020</strong></h3>
+          <p class="sectionContent"><strong>Notable Courses:</strong> Computer Networks, Operating Systems, Human-Computer Interaction, Computer Architecture, Algorithms, and Software Development</p>
+          <p class="sectionContent"><strong>Project Experience:</strong> Python, C++, C, Java, JavaScript, Perl, Spring</p>
         </div>
-        <h3 class="sectionContentSubTitle"><strong>Master's Degree in Computer Science | 2019 - 2021</strong></h3>
-        <p class="sectionContent"><strong>Notable Courses:</strong> Cyber Forensics, Secure Programming, IoT Security, Cyber Security, Computer Networks, Advanced Algorithms, Approximation Algorithms, Computer Finance, Parallel Simulation, and Financial Market Simulation</p>
-        <p class="sectionContent"><strong>Project Experience:</strong> Rust, Python, C++, C#, C, Java, JavaScript, Socket Programming, Spring</p>
 
         <br />
 
-        <!-- UGA - Bachelor's -->
-        <h3 class="sectionContentSubTitle"><strong>Bachelor's Degree in Computer Science | 2016 - 2020</strong></h3>
-        <p class="sectionContent"><strong>Notable Courses:</strong> Computer Networks, Operating Systems, Human-Computer Interaction, Computer Architecture, Algorithms, and Software Development</p>
-        <p class="sectionContent"><strong>Project Experience:</strong> Python, C++, C, Java, JavaScript, Perl, Spring</p>
+        <!-- Work Experience -->
+        <h2 class="sectionTitle">Experience</h2>
+        <hr class="sectionTitleRule">
+        <hr class="sectionTitleRule2">
+
+        <div class="section2Content">
+          <!-- Cox Communications -->
+          <h2 class="sectionContentTitle">Cox Communications</h2>
+          <h3 class="sectionContentSubTitle"><strong>Software Engineer II | 2021 - Present</strong></h3>
+          <ul class="sectionContent" style="padding-inline-start: 15px;">
+            <li>Develop, evolve, and maintain an internal Sales Communications and Knowledge Management (KM) platform that is written in Python, HTML, CSS, JavaScript, and JQuery and is utilized by frontline, 3rd party, and retail Sales Agents</li>
+            <li>Maintain strict Model-View-Controller (MVC) principles across the whole team's tech stack</li>
+            <li>Utilizing CI/CD fundamentals, maintained a deployment pipeline through Development, Quality Assurance, and Production environments via Jenkins Pipeline</li>
+            <li>Led the PaaS environment migration from Rancher to Google Cloud Platform (GCP, Anthos), streamlining deployment processes, reducing downtime, and ensuring robust infrastructure scalability</li>
+            <li>Take the lead on multiple projects that require input from internal and 3rd party teams</li>
+            <li>Executed meticulous security protocols and continuous system monitoring via an internal security suite and Prisma Cloud Monitoring, safeguarding data integrity and enhancing platform reliability</li>
+            <li>Perform DevOps maintenance and patching for the team's managed systems using Kubernetes and Docker</li>
+            <li>Conducted meticulous User Acceptance Testing, ensuring high-quality deployments and minimizing post-launch issues across environments</li>
+            <li>Use and provide feedback on REST APIs from multiple internal and external services to ingest KM content, provide translation services, allow user profile services, etc.</li>
+            <li>Gather feedback from key stakeholders, create user stories, and seek to improve the functionalities of the KM system</li>
+            <li>Partner with Content Admins to better understand and evolve their use of the KM platform</li>
+            <li>Partner with other Sales teams to produce KM solutions</li>
+            <li>Leverage data analytics to compile actionable metrics, driving informed decision-making and continuous improvement in Sales Agent performance</li>
+            <li>Provide weekly and monthly metric updates for pertinent KPIs</li>
+            <li>Implemented agile methodologies, enhancing team efficiency and project delivery timelines, utilizing Jira for streamlined task management</li>
+            <li>Pioneer a Graph Database (GDB) implementation, harnessing Machine Learning to unlock valuable insights from Agent-produced data and enhance system capabilities</li>
+            <li>Onboard New Relic as an Application and Infrastructure Monitoring tool across all non-production and production environments</li>
+            <li>Participate in weekly Change Advisory Board meetings to inform leaders about changes to company software environments as well as any degradations of Sales-related services</li>
+            <li>Participate in the Python@Cox group to partner with other teams and expand understanding of the Python coding language</li>
+            <li>Maintain a constantly developing understanding of the newest Common Vulnerabilities and Exposures (CVEs)</li>
+            <li>Work with multiple mentors to expand Sales, Business, and technology-related knowledge</li>
+            <li>Enhanced system efficiency by optimizing Python scripts and improving knowledge management workflows for seamless sales operations</li>
+            <li>Collaborated with cross-functional teams to integrate third-party APIs, optimizing the KM platform's functionality and enhancing user experience</li>
+            <li>Foster cross-functional partnerships, leading multi-team projects and aligning stakeholder needs to deliver impactful Knowledge Management solutions</li>
+          </ul>
+          
+          <br />
+
+          <!-- Barrow County School System - Technical Analyst -->
+          <h2 class="sectionContentTitle">Barrow County School System</h2>
+          <h3 class="sectionContentSubTitle"><strong>Technical Analyst | 2018 - 2021</strong></h3>
+          <ul class="sectionContent" style="padding-inline-start: 15px;">
+            <li>Provide maintenance to district devices including but not limited to desktop computers, laptop computers, Chromebooks, switches, Virtual Reality setups, and monitors</li>
+            <li>Facilitated tech integration in classrooms, enhancing educational experiences and fostering teacher collaboration for enriched learning</li>
+            <li>Spearheaded maintenance of diverse tech systems, from VR setups to broadcast studios, fostering a cutting-edge learning environment</li>
+            <li>Partnered with teachers to integrate technology in classrooms, aligning tech solutions with lesson plans for enriched, student-centered learning experiences</li>
+            <li>Understand lesson plans and how to provide students with a technology rich lesson</li>
+            <li>Diagnosed and resolved complex networking issues, maintaining high reliability of wireless networks and VoIP systems across the district</li>
+            <li>Managed user accounts across Google and Office 365 platforms, ensuring seamless access and support for both teachers and students</li>
+            <li>Received 8 “Shining Moments” awards from the Sims Academy of Innovation and Technology</li>
+          </ul>
+
+          <br />
+
+          <!-- Barrow County School System - ITS Intern -->
+          <h2 class="sectionContentTitle">Barrow County School System</h2>
+          <h3 class="sectionContentSubTitle"><strong>ITS Intern | 2016 - 2018</strong></h3>
+          <ul class="sectionContent" style="padding-inline-start: 15px;">
+            <li>Assisted in the day-to-day maintenance and repair of all district computer systems. This includes Windows devices, both desktops and notebooks, Chromebooks, and Mac hardware</li>
+            <li>Maintained, repaired, and mounted interactive projector systems used for instruction</li>
+            <li>Work directly with teachers to address specific needs regarding how technology is used within their classroom</li>
+            <li>Provided support for Chromebooks and iPads. This includes the use of the Chrome Management Console to help manage chrome devices and district G-Suite Accounts as well as using AirWatch for managing iPads and app deployment.</li>
+            <li>Supported a new streaming platform being rolled out to Elementary Schools.</li>
+            <li>Helped schools create audio and video presentations of schools using Adobe Creative Cloud.</li>
+          </ul>
+
+          <br />
+
+          <!-- Barrow County School System - Networking Intern -->
+          <h2 class="sectionContentTitle">Barrow County School System</h2>
+          <h3 class="sectionContentSubTitle"><strong>Networking Intern | 2014 - 2016</strong></h3>
+          <ul class="sectionContent" style="padding-inline-start: 15px;">
+            <li>Served as a bridge between the Technology and Teaching and Learning departments.</li>
+            <li>Delivered comprehensive hardware and software support for Chromebooks and iPads, ensuring optimal functionality for educational activities.</li>
+            <li>Contributed to the meticulous maintenance and repair of district-wide computer systems, minimizing downtime and maximizing resource availability.</li>
+            <li>Developed and conducted training sessions on new educational technologies, empowering teachers to effectively integrate digital tools in classrooms.</li>
+          </ul>
+
+        </div>
       </div>
-
-      <br />
-
-      <!-- Work Experience -->
-      <h2 class="sectionTitle">Experience</h2>
-      <hr class="sectionTitleRule">
-      <hr class="sectionTitleRule2">
-
-      <div class="section2Content">
-        <!-- Cox Communications -->
-        <h2 class="sectionContentTitle">Cox Communications</h2>
-        <h3 class="sectionContentSubTitle"><strong>Software Engineer II | 2021 - Present</strong></h3>
-        <ul class="sectionContent" style="padding-inline-start: 15px;">
-          <li>Develop, evolve, and maintain an internal Sales Communications and Knowledge Management (KM) platform that is written in Python, HTML, CSS, JavaScript, and JQuery and is utilized by frontline, 3rd party, and retail Sales Agents</li>
-          <li>Maintain strict Model-View-Controller (MVC) principles across the whole team's tech stack</li>
-          <li>Utilizing CI/CD fundamentals, maintained a deployment pipeline through Development, Quality Assurance, and Production environments via Jenkins Pipeline</li>
-          <li>Led the PaaS environment migration from Rancher to Google Cloud Platform (GCP, Anthos), streamlining deployment processes, reducing downtime, and ensuring robust infrastructure scalability</li>
-          <li>Take the lead on multiple projects that require input from internal and 3rd party teams</li>
-          <li>Executed meticulous security protocols and continuous system monitoring via an internal security suite and Prisma Cloud Monitoring, safeguarding data integrity and enhancing platform reliability</li>
-          <li>Perform DevOps maintenance and patching for the team's managed systems using Kubernetes and Docker</li>
-          <li>Conducted meticulous User Acceptance Testing, ensuring high-quality deployments and minimizing post-launch issues across environments</li>
-          <li>Use and provide feedback on REST APIs from multiple internal and external services to ingest KM content, provide translation services, allow user profile services, etc.</li>
-          <li>Gather feedback from key stakeholders, create user stories, and seek to improve the functionalities of the KM system</li>
-          <li>Partner with Content Admins to better understand and evolve their use of the KM platform</li>
-          <li>Partner with other Sales teams to produce KM solutions</li>
-          <li>Leverage data analytics to compile actionable metrics, driving informed decision-making and continuous improvement in Sales Agent performance</li>
-          <li>Provide weekly and monthly metric updates for pertinent KPIs</li>
-          <li>Implemented agile methodologies, enhancing team efficiency and project delivery timelines, utilizing Jira for streamlined task management</li>
-          <li>Pioneer a Graph Database (GDB) implementation, harnessing Machine Learning to unlock valuable insights from Agent-produced data and enhance system capabilities</li>
-          <li>Onboard New Relic as an Application and Infrastructure Monitoring tool across all non-production and production environments</li>
-          <li>Participate in weekly Change Advisory Board meetings to inform leaders about changes to company software environments as well as any degradations of Sales-related services</li>
-          <li>Participate in the Python@Cox group to partner with other teams and expand understanding of the Python coding language</li>
-          <li>Maintain a constantly developing understanding of the newest Common Vulnerabilities and Exposures (CVEs)</li>
-          <li>Work with multiple mentors to expand Sales, Business, and technology-related knowledge</li>
-          <li>Enhanced system efficiency by optimizing Python scripts and improving knowledge management workflows for seamless sales operations</li>
-          <li>Collaborated with cross-functional teams to integrate third-party APIs, optimizing the KM platform's functionality and enhancing user experience</li>
-          <li>Foster cross-functional partnerships, leading multi-team projects and aligning stakeholder needs to deliver impactful Knowledge Management solutions</li>
-        </ul>
-        
-        <br />
-
-        <!-- Barrow County School System - Technical Analyst -->
-        <h2 class="sectionContentTitle">Barrow County School System</h2>
-        <h3 class="sectionContentSubTitle"><strong>Technical Analyst | 2018 - 2021</strong></h3>
-        <ul class="sectionContent" style="padding-inline-start: 15px;">
-          <li>Provide maintenance to district devices including but not limited to desktop computers, laptop computers, Chromebooks, switches, Virtual Reality setups, and monitors</li>
-          <li>Facilitated tech integration in classrooms, enhancing educational experiences and fostering teacher collaboration for enriched learning</li>
-          <li>Spearheaded maintenance of diverse tech systems, from VR setups to broadcast studios, fostering a cutting-edge learning environment</li>
-          <li>Partnered with teachers to integrate technology in classrooms, aligning tech solutions with lesson plans for enriched, student-centered learning experiences</li>
-          <li>Understand lesson plans and how to provide students with a technology rich lesson</li>
-          <li>Diagnosed and resolved complex networking issues, maintaining high reliability of wireless networks and VoIP systems across the district</li>
-          <li>Managed user accounts across Google and Office 365 platforms, ensuring seamless access and support for both teachers and students</li>
-          <li>Received 8 “Shining Moments” awards from the Sims Academy of Innovation and Technology</li>
-        </ul>
-
-        <br />
-
-        <!-- Barrow County School System - ITS Intern -->
-        <h2 class="sectionContentTitle">Barrow County School System</h2>
-        <h3 class="sectionContentSubTitle"><strong>ITS Intern | 2016 - 2018</strong></h3>
-        <ul class="sectionContent" style="padding-inline-start: 15px;">
-          <li>Assisted in the day-to-day maintenance and repair of all district computer systems. This includes Windows devices, both desktops and notebooks, Chromebooks, and Mac hardware</li>
-          <li>Maintained, repaired, and mounted interactive projector systems used for instruction</li>
-          <li>Work directly with teachers to address specific needs regarding how technology is used within their classroom</li>
-          <li>Provided support for Chromebooks and iPads. This includes the use of the Chrome Management Console to help manage chrome devices and district G-Suite Accounts as well as using AirWatch for managing iPads and app deployment.</li>
-          <li>Supported a new streaming platform being rolled out to Elementary Schools.</li>
-          <li>Helped schools create audio and video presentations of schools using Adobe Creative Cloud.</li>
-        </ul>
-
-        <br />
-
-        <!-- Barrow County School System - Networking Intern -->
-        <h2 class="sectionContentTitle">Barrow County School System</h2>
-        <h3 class="sectionContentSubTitle"><strong>Networking Intern | 2014 - 2016</strong></h3>
-        <ul class="sectionContent" style="padding-inline-start: 15px;">
-          <li>Served as a bridge between the Technology and Teaching and Learning departments.</li>
-          <li>Delivered comprehensive hardware and software support for Chromebooks and iPads, ensuring optimal functionality for educational activities.</li>
-          <li>Contributed to the meticulous maintenance and repair of district-wide computer systems, minimizing downtime and maximizing resource availability.</li>
-          <li>Developed and conducted training sessions on new educational technologies, empowering teachers to effectively integrate digital tools in classrooms.</li>
-        </ul>
-
-      </div>
-    </div>
+    </main>
 
     <br />
 
