--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
 
     <!-- Sticky social media icons -->
-    <div class="sticky-container" aria-label="Social Media">
+    <div class="sticky-container">
       <ul class="sticky">
         <li>
           <a href="http://www.github.com/cbritt0n" target="_blank"><img src="resources/images/github.png" width="32" height="32"></a>
